style: added on hover styling for hambuger icon menu popup

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -20,10 +20,10 @@
   <div *ngIf="showMenu" class="p-4 w-80 bg-gray-900 text-white">
     <nav>
       <ul class="text-3xl">
-        <li><a>Home</a></li>
-        <li><a>Practice</a></li>
-        <li><a>Discussions</a></li>
-        <li><a>Daily Question</a></li>
+        <li><a class="cursor-pointer hover:text-blue-400">Home</a></li>
+        <li><a class="cursor-pointer hover:text-blue-400">Practice</a></li>
+        <li><a class="cursor-pointer hover:text-blue-400">Discussions</a></li>
+        <li><a class="cursor-pointer hover:text-blue-400">Daily Question</a></li>
       </ul>
     </nav>
   </div>
