--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -17,15 +17,19 @@
     <!-- Right side: Gray box -->
     <div class="w-12 h-12 bg-gray-300 rounded-sm"></div>
   </header>
-  <div *ngIf="showMenu" class="p-4 w-80 bg-gray-900 text-white">
-    <nav>
-      <ul class="text-3xl">
-        <li><a class="cursor-pointer hover:text-blue-400">Home</a></li>
-        <li><a class="cursor-pointer hover:text-blue-400">Practice</a></li>
-        <li><a class="cursor-pointer hover:text-blue-400">Discussions</a></li>
-        <li><a class="cursor-pointer hover:text-blue-400">Daily Question</a></li>
-      </ul>
-    </nav>
-  </div>
+  <div
+  *ngIf="showMenu"
+  class="p-4 w-80 bg-gray-900 text-white transform transition-all duration-300 ease-out origin-top scale-y-100 opacity-100"
+>
+  <nav>
+    <ul class="text-3xl space-y-2">
+      <li><a class="cursor-pointer hover:text-blue-400">Home</a></li>
+      <li><a class="cursor-pointer hover:text-blue-400">Practice</a></li>
+      <li><a class="cursor-pointer hover:text-blue-400">Discussions</a></li>
+      <li><a class="cursor-pointer hover:text-blue-400">Daily Question</a></li>
+    </ul>
+  </nav>
+</div>
+
   
   
