--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,36 +3,7 @@
     <app-header></app-header>
   
     <main class="flex-grow p-8">
-      <div class="flex flex-row gap-8 h-full">
-  
-        <div class="flex flex-col gap-8 w-1/3">
-          <div class="bg-gray-300 p-8 text-4xl text-center font-bold">
-            Welcome Back
-          </div>
-          <div class="bg-gray-300 p-4 text-4xl text-center font-bold h-full">
-            Daily Question
-          </div>
-        </div>
-  
-        <div class="bg-gray-200 p-6 w-2/3 flex flex-col gap-6">
-          <div>
-            <h2 class="font-bold underline text-5xl mb-2">Problems</h2>
-            <ul class="space-y- text-4xl">
-              <li>Code Refactoring Techniques</li>
-              <li>Code Smells</li>
-              <li>Design Patterns</li>
-            </ul>
-          </div>
-  
-          <div>
-            <h2 class="font-bold underline text-5xl mb-2">Discussions</h2>
-            <div class="bg-white p-4 rounded font-bold underline text-2xl cursor-pointer">
-              Show Most Recent Discussion Here
-            </div>
-          </div>
-        </div>
-  
-      </div>
+      <router-outlet></router-outlet>
     </main>
   </div>
   
