style: fixed background styling so that the webpage has consistent background colours

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="h-screen flex flex-col bg-gray-700 text-black font-sans">
+<div class="h-screen flex flex-col bg-gray-900 text-white font-sans">
 
     <app-header></app-header>
   
